--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </nav>
     </header>
     <main>
-        <section class="main-section-wrap bg-image">
-            <div class="main-section padding-inline-box dp-spc-btwn">
+        <section class="hght-90 bg-image">
+            <div class="main-section align-items-center padding-inline-box dp-spc-btwn">
                 <div class="flx-basis45 margin-top1">
                     <h1 class="h1-title margin-bottom1 wht-color">JANUARY BRINGS US FIREFOX 85</h1>
                     <p class="paragraph wht-color">To wrap up January, we are proud to bring you the release of Firefox 85. In this version we are bringing you support for the :focus-visible pseudo-class in CSS and associated devtools, and the complete removal of Flash support from Firefox.</p>
@@ -42,34 +42,25 @@
                 <p class="paragraph align-txt-center wdth-50 margin-auto margin-bottom2">We’ll then explain how DRM/EME works on the new platform, talk about our experience with macOS Big Sur, and discuss various updater problems we had to deal with. We’ll conclude with the release and an overview of various other improvements that are in the pipeline.</p>
             </div>
         </section>
-        <section class="top3-section bg-image">
-            <h1 class="h1-title wht-color padding-top2">TOP 3 JOBS</h1>
+        <section class="top3-section dp-jstfy-center-flx-clmn hght-90 align-items-left bg-image">
+            <h1 class="h1-title wht-color">TOP 3 JOBS</h1>
             <p class="paragraph wht-color margin-top3">Here are some recent work.</p>
             <div>
                 <ul class="flx-row gap1 margin-top4">
                     <li>
-                        <div class="margin-bottom4">
-                            <div>
-                                <img src="" alt="">
-                            </div>
+                        <div class="box-position-relative margin-bottom4">
                             <h2 class="h2-title wht-color">First</h2>
                         </div>
                         <p class="paragraph wht-color">This button would add a box to the row of key content boxes below the intro text. This should put the box there regardless of where the user is currently writing.</p>
                     </li>
                     <li>
-                        <div class="margin-bottom4">
-                            <div>
-                                <img src="" alt="">
-                            </div>
+                        <div class="box-position-relative margin-bottom4">
                             <h2 class="h2-title wht-color">Another site</h2>
                         </div>
                         <p class="paragraph wht-color">I'd suggest having a popup that asks where in the row to insert the box (at the beginning or end), what title to give the box, what text to put in the box, and where the box should link to. The entire box should serve as a link to the destination page.</p>
                     </li>
                     <li>
-                        <div class="margin-bottom4">
-                            <div>
-                                <img src="" alt="">
-                            </div>
+                        <div class="box-position-relative margin-bottom4">
                             <h2 class="h2-title wht-color">Third one</h2>
                         </div>
                         <p class="paragraph wht-color">You can also include a type attribute containing the MIME type of the resource, so a browser can quickly see what resources are on offer, and ignore ones that it doesn’t support</p>
