--- a/index.html
+++ b/index.html
@@ -7,21 +7,23 @@
     <link rel="stylesheet" href="assets/style/index.css">
 </head>
 <body>
-    <header class="header dp-spc-btwn padding padding-inline-box wth-bg sticky-top">
-        <div>
-            <h1 class="logo">LOGO</h1>
+    <header class="header padding padding-inline-box wth-bg sticky-top">
+        <div class="dp-spc-btwn section-content-max-width margin-auto">
+            <div>
+                <h1 class="logo">LOGO</h1>
+            </div>
+            <nav>
+                <a class="_link-wght500" href="#">Intro</a>
+                <a class="_link-wght500" href="#">Top 3</a>
+                <a class="_link-wght500" href="#">Gallery</a>
+                <a class="_link-wght500" href="#">Work</a>
+                <a class="_link-wght500" href="#">Contact</a>
+            </nav>
         </div>
-        <nav>
-            <a class="_link-wght500" href="#">Intro</a>
-            <a class="_link-wght500" href="#">Top 3</a>
-            <a class="_link-wght500" href="#">Gallery</a>
-            <a class="_link-wght500" href="#">Work</a>
-            <a class="_link-wght500" href="#">Contact</a>
-        </nav>
     </header>
     <main>
         <section class="hght-90 bg-image">
-            <div class="main-section align-items-center padding-inline-box dp-spc-btwn">
+            <div class="main-section align-items-center padding-inline-box dp-spc-btwn section-content-max-width margin-auto">
                 <div class="flx-basis45 margin-top1">
                     <h1 class="h1-title margin-bottom1 wht-color">JANUARY BRINGS US FIREFOX 85</h1>
                     <p class="paragraph wht-color">To wrap up January, we are proud to bring you the release of Firefox 85. In this version we are bringing you support for the :focus-visible pseudo-class in CSS and associated devtools, and the complete removal of Flash support from Firefox.</p>
@@ -34,19 +36,23 @@
                 </div>
             </div>
         </section>
-        <section class="intro-section">
-            <h1 class="h1-title align-txt-center margin-top2 margin-auto" style="width: 50%">News coverage and some surprises</h1>
-            <div class="margin-top1 margin-bottom3">
+        <section class="intro-section margin-bottom5">
+            <div class="section-content-max-width margin-auto">
+                <h1 class="h1-title align-txt-center margin-top4 margin-auto" style="width: 50%">News coverage and some surprises</h1>
+            </div>
+            <div class="margin-top1 margin-bottom3 section-content-max-width margin-auto">
                 <p class="paragraph align-txt-center wdth-50 margin-auto margin-bottom2">The release of Apple Silicon-based Macs at the end of last year generated a flurry of news coverage and some surprises at the machine’s performance. This post details some background information on the experience of porting Firefox to run natively on these CPUs.</p>
                 <p class="paragraph align-txt-center wdth-50 margin-auto margin-bottom2">We’ll start with some background on the Mac transition and give an overview of Firefox internals that needed to know about the new architecture, before moving on to the concept of Universal Binaries.</p>
                 <p class="paragraph align-txt-center wdth-50 margin-auto margin-bottom2">We’ll then explain how DRM/EME works on the new platform, talk about our experience with macOS Big Sur, and discuss various updater problems we had to deal with. We’ll conclude with the release and an overview of various other improvements that are in the pipeline.</p>
             </div>
         </section>
         <section class="top3-section dp-jstfy-center-flx-clmn hght-90 align-items-left bg-image">
-            <h1 class="h1-title wht-color">TOP 3 JOBS</h1>
-            <p class="paragraph wht-color margin-top3">Here are some recent work.</p>
-            <div>
-                <ul class="flx-row gap1 margin-top4">
+            <div class="section-content-max-width margin-auto">
+                <h1 class="h1-title wht-color">TOP 3 JOBS</h1>
+                <p class="paragraph wht-color margin-top3">Here are some recent work.</p>
+            </div>
+            <div class="margin-top4 section-content-max-width margin-auto">
+                <ul class="flx-row gap1">
                     <li>
                         <div class="box-position-relative margin-bottom4">
                             <h2 class="h2-title wht-color">First</h2>
@@ -66,6 +72,32 @@
                         <p class="paragraph wht-color">You can also include a type attribute containing the MIME type of the resource, so a browser can quickly see what resources are on offer, and ignore ones that it doesn’t support</p>
                     </li>
                 </ul>
+            </div>
+        </section>
+        <section class="gallery padding-inline-box">
+            <div class="margin-top4 section-content-max-width margin-auto">
+                <h1 class="h1-title">GALLERY</h1>
+                <p class="paragraph margin-top5">Here are some of my pics.</p>
+            </div>
+            <div class="container-images margin-top4 section-content-max-width margin-auto">
+                <div class="image-container-fit _zoom-hover">
+                    <img src="https://source.unsplash.com/random/800x800" alt="Unsplash random image">
+                </div>
+                <div class="image-container-fit _zoom-hover">
+                    <img src="https://source.unsplash.com/random/900x900" alt="Unsplash random image">
+                </div>
+                <div class="image-container-fit _zoom-hover">
+                    <img src="https://source.unsplash.com/random/500x500" alt="Unsplash random image">
+                </div>
+                <div class="image-container-fit _zoom-hover">
+                    <img src="https://source.unsplash.com/random/801x801" alt="Unsplash random image">
+                </div>
+                <div class="image-container-fit _zoom-hover">
+                    <img src="https://source.unsplash.com/random/904x904" alt="Unsplash random image">
+                </div>
+                <div class="image-container-fit _zoom-hover">
+                    <img src="https://source.unsplash.com/random/505x505" alt="Unsplash random image">
+                </div>
             </div>
         </section>
     </main>
