recent jobs section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
         </section>
         <section class="top3-section dp-jstfy-center-flx-clmn hght-90 align-items-left bg-image">
-            <div class="section-content-max-width margin-auto">
+            <div class="header-content section-content-max-width margin-auto">
                 <h1 class="h1-title wht-color">TOP 3 JOBS</h1>
                 <p class="paragraph wht-color margin-top3">Here are some recent work.</p>
             </div>
@@ -74,7 +74,7 @@
                 </ul>
             </div>
         </section>
-        <section class="gallery padding-inline-box">
+        <section class="gallery padding-inline-box margin-bottom5">
             <div class="margin-top4 section-content-max-width margin-auto">
                 <h1 class="h1-title">GALLERY</h1>
                 <p class="paragraph margin-top5">Here are some of my pics.</p>
@@ -98,6 +98,33 @@
                 <div class="image-container-fit _zoom-hover">
                     <img src="https://source.unsplash.com/random/505x505" alt="Unsplash random image">
                 </div>
+            </div>
+        </section>
+        <section class="top3-section dp-jstfy-center-flx-clmn hght-90 align-items-left bg-image">
+            <div class="header-content section-content-max-width margin-auto">
+                <h1 class="h1-title wht-color">RECENT JOBS</h1>
+            </div>
+            <div class="margin-top4 section-content-max-width margin-auto">
+                <ul class="flx-row gap1">
+                    <li>
+                        <div class="box-position-relative margin-bottom4">
+                            <h2 class="h2-title wht-color">A good one</h2>
+                        </div>
+                        <p class="paragraph wht-color">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam perferendis nisi omnis culpa eius optio eos inventore rerum? Harum velit consectetur tempora et numquam distinctio vero exercitationem mollitia laborum inventore?</p>
+                    </li>
+                    <li>
+                        <div class="box-position-relative margin-bottom4">
+                            <h2 class="h2-title wht-color">Great job</h2>
+                        </div>
+                        <p class="paragraph wht-color">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam perferendis nisi omnis culpa eius optio eos inventore rerum? Harum velit consectetur tempora et numquam distinctio vero exercitationem mollitia laborum inventore?</p>
+                    </li>
+                    <li>
+                        <div class="box-position-relative margin-bottom4">
+                            <h2 class="h2-title wht-color">The best</h2>
+                        </div>
+                        <p class="paragraph wht-color">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam perferendis nisi omnis culpa eius optio eos inventore rerum? Harum velit consectetur tempora et numquam distinctio vero exercitationem mollitia laborum inventore?</p>
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
