--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
             </div>
         </section>
-        <section class="intro-section margin-bottom5">
+        <section class="intro-section margin-bottom5 wth-bg">
             <div class="section-content-max-width margin-auto">
                 <h1 class="h1-title align-txt-center margin-top4 margin-auto" style="width: 50%">News coverage and some surprises</h1>
             </div>
@@ -125,6 +125,55 @@
                         <p class="paragraph wht-color">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam perferendis nisi omnis culpa eius optio eos inventore rerum? Harum velit consectetur tempora et numquam distinctio vero exercitationem mollitia laborum inventore?</p>
                     </li>
                 </ul>
+            </div>
+        </section>
+        <section class="pricing-section margin-bottom5 wht-bg">
+            <div class="section-content-max-width margin-auto">
+                <h1 class="h1-title align-txt-center margin-top4 margin-auto" style="width: 50%">PRICING</h1>
+                <p class="paragraph align-txt-center wdth-50 margin-auto margin-top1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium voluptate repellat, rem perferendis velit nisi quod, omnis accusamus alias, dicta eligendi et distinctio magni sit quibusdam modi minus ipsum placeat!</p>
+            </div>
+            <div class="margin-top1 section-content-max-width margin-auto">
+                <table class="table-pricing margin-auto">
+                    <caption>Pricing table</caption>
+                    <thead>
+                        <tr class="header-line">
+                            <th class="paragraph bold-700" scope="col">Title 1</th>
+                            <th class="paragraph bold-700" scope="col">Title 2</th>
+                            <th class="paragraph bold-700" scope="col">Title 3</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="paragraph space-right">Content 1</td>
+                            <td class="paragraph">Content 2</td>
+                            <td class="paragraph">Content 3</td>
+                        </tr>
+                        <tr>
+                            <td class="paragraph space-right">Content 1</td>
+                            <td class="paragraph">Content 2</td>
+                            <td class="paragraph">Content 3</td>
+                        </tr>
+                        <tr>
+                            <td class="paragraph space-right">Content 1</td>
+                            <td class="paragraph">Content 2</td>
+                            <td class="paragraph">Content 3</td>
+                        </tr>
+                        <tr>
+                            <td class="paragraph" scope="rowgroup" rowspan="2">SPAN DOWN</td>
+                            <td class="paragraph">Content 2</td>
+                            <td class="paragraph">Content 3</td>
+                        </tr>
+                        <tr>
+                            <td class="paragraph">Content 2</td>
+                            <td class="paragraph">Content 3</td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td class="paragraph" scope="colgroup" colspan="3">Footer 1</td>
+                        </tr>
+                    </tfoot>
+                </table>
             </div>
         </section>
     </main>
