--- a/index.html
+++ b/index.html
@@ -176,6 +176,52 @@
                 </table>
             </div>
         </section>
+        <section class="bg-image">
+            <div class="contact-section main-section align-items-center padding-inline-box dp-spc-btwn section-content-max-width margin-auto">
+                <div class="flx-basis45 margin-top1">
+                    <h1 class="h1-title margin-bottom1 wht-color">CONTACT US</h1>
+                    <p class="paragraph wht-color">To wrap up January, we are proud to bring you the release of Firefox 85. In this version we are bringing you support for the :focus-visible pseudo-class in CSS and associated devtools, and the complete removal of Flash support from Firefox.</p>
+                </div>
+                <div class="main-section-image-container image-container-fit flx-basis55">
+                    <div>
+                        <img src="assets/images/contact.svg" alt="Contact">
+                    </div>
+                </div>
+                <div class="form-contact-container margin-top4">
+                    <form class="form-contact" action="" method="post">
+                        <fieldset>
+                            <legend class="legend paragraph wht-color">Contact form</legend>
+                            <div class="form-contact--inputs margin-top3">
+                                <div class="collumn-items">
+                                    <label class="paragraph wht-color" for="iname">First Name</label>
+                                    <input class="paragraph top-inputs gap-top" type="text" name="" id="iname" placeholder="Your name">
+                                </div>
+                                <div class="collumn-items">
+                                    <label class="paragraph wht-color" for="ilast">Last Name</label>
+                                    <input class="paragraph top-inputs gap-top" type="text" name="" id="ilast" placeholder="Your last name">
+                                </div>
+                                <div class="collumn-items">
+                                    <label class="paragraph wht-color" for="iemail">Email</label>
+                                    <input class="paragraph top-inputs gap-top" type="email" name="" id="iemail" placeholder="Your good e-mail">
+                                </div>
+                                <div class="textarea collumn-items">
+                                    <label class="paragraph wht-color" for="itextarea">Your message:</label>
+                                    <textarea class="paragraph gap-top bottom-textarea" name="" id="itextarea" cols="30" rows="10"></textarea>
+                                </div>
+                                <div>
+                                    <input class="paragraph wht-color submit-button gap-top" type="submit" value="Send message">
+                                </div>
+                            </div>
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer class="footer">
+        <p class="paragraph align-txt-center">
+            <a href="#">Feito por Gabriel Tomás</a>
+        </p>
+    </footer>
 </body>
 </html>
