--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="assets/style/index.css">
+    <link rel="stylesheet" href="assets/style/media-queries/800px/index-media-query-800px.css" media="screen and (width <= 800px)">
 </head>
 <body>
     <header class="header padding padding-inline-box wth-bg sticky-top">
-        <div class="dp-spc-btwn section-content-max-width margin-auto">
+        <div class="header--children dp-spc-btwn section-content-max-width margin-auto">
             <div>
                 <h1 class="logo">LOGO</h1>
             </div>
@@ -20,15 +22,20 @@
                 <a class="_link-wght500" href="#">Contact</a>
             </nav>
         </div>
+        <div class="padding-inline-box margin-top3">
+            <button id="menu-button" class="wht-color">
+                <span class="material-symbols-outlined">menu</span>
+            </button>
+        </div>
     </header>
-    <main>
-        <section class="hght-90 bg-image">
+    <main class="main">
+        <section class="hght-auto hght-90 bg-image padding-top3 padding-bottom5">
             <div class="main-section align-items-center padding-inline-box dp-spc-btwn section-content-max-width margin-auto">
-                <div class="flx-basis45 margin-top1">
+                <div class="text-container flx-basis45 margin-top1">
                     <h1 class="h1-title margin-bottom1 wht-color">JANUARY BRINGS US FIREFOX 85</h1>
                     <p class="paragraph wht-color">To wrap up January, we are proud to bring you the release of Firefox 85. In this version we are bringing you support for the :focus-visible pseudo-class in CSS and associated devtools, and the complete removal of Flash support from Firefox.</p>
                 </div>
-                <div class="main-section-image-container image-container-fit flx-basis55">
+                <div class="main-section-image-container image-container-fit flx-basis55 margin-top4">
                     <picture>
                         <source media="(max-width: 800px)" srcset="assets/images/javascript.svg">
                         <img src="assets/images/javascript-not-optimized.svg" alt="HTML5 CSS3 JavaScript">
