menu-buttun bug fixed

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a class="_link-wght500" href="#">Contact</a>
             </nav>
         </div>
-        <div class="padding-inline-box margin-top3">
+        <div class="menu-button-container padding-inline-box margin-top3">
             <button id="menu-button" class="wht-color">
                 <span class="material-symbols-outlined">menu</span>
             </button>
