media query problem fixed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Simple</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="assets/style/index.css">
-    <link rel="stylesheet" href="assets/style/media-queries/800px/index-media-query-800px.css" media="screen and (width <= 800px)">
+    <link rel="stylesheet" href="assets/style/media-queries/800px/index-media-query-800px.css" media="screen and (max-width: 800px)">
 </head>
 <body>
     <header class="header padding padding-inline-box wth-bg sticky-top">
