intro-section paragraph

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
             <div class="section-content-max-width margin-auto">
                 <h1 class="h1-title align-txt-center margin-top4 margin-auto" style="width: 50%">News coverage and some surprises</h1>
             </div>
-            <div class="margin-top1 margin-bottom3 section-content-max-width margin-auto">
-                <p class="paragraph align-txt-center wdth-50 margin-auto margin-bottom2">The release of Apple Silicon-based Macs at the end of last year generated a flurry of news coverage and some surprises at the machine’s performance. This post details some background information on the experience of porting Firefox to run natively on these CPUs.</p>
-                <p class="paragraph align-txt-center wdth-50 margin-auto margin-bottom2">We’ll start with some background on the Mac transition and give an overview of Firefox internals that needed to know about the new architecture, before moving on to the concept of Universal Binaries.</p>
-                <p class="paragraph align-txt-center wdth-50 margin-auto margin-bottom2">We’ll then explain how DRM/EME works on the new platform, talk about our experience with macOS Big Sur, and discuss various updater problems we had to deal with. We’ll conclude with the release and an overview of various other improvements that are in the pipeline.</p>
+            <div class="margin-top1 margin-bottom3 wdth-50 section-content-max-width margin-auto paragraph-container">
+                <p class="paragraph align-txt-center margin-auto margin-bottom2">The release of Apple Silicon-based Macs at the end of last year generated a flurry of news coverage and some surprises at the machine’s performance. This post details some background information on the experience of porting Firefox to run natively on these CPUs.</p>
+                <p class="paragraph align-txt-center margin-auto margin-bottom2">We’ll start with some background on the Mac transition and give an overview of Firefox internals that needed to know about the new architecture, before moving on to the concept of Universal Binaries.</p>
+                <p class="paragraph align-txt-center margin-auto margin-bottom2">We’ll then explain how DRM/EME works on the new platform, talk about our experience with macOS Big Sur, and discuss various updater problems we had to deal with. We’ll conclude with the release and an overview of various other improvements that are in the pipeline.</p>
             </div>
         </section>
         <section class="top3-section dp-jstfy-center-flx-clmn hght-90 align-items-left bg-image">
